# minidb

./: .gitignore  CMakeLists.txt
common/: config.h  error.h  indexer.h  log.h  membuf.h  noncopyable.h  scope_guard.h  serialization.h  types.h
storage/: CMakeLists.txt
storage/include/: index.h  index_node.h  record.h  record_manager.h  types.h
storage/include/buffer/: buffer_pool.h  frame.h  lru_cache.h  memory_pool.h
storage/include/disk/: bptree.h  disk_manager.h  page.h
storage/include/index/: cursor.h  index.h  index_meta.h  index_node.h  record.h  record_manager.h
storage/include/table/: record_meta.h  table_meta.h
storage/src/: index.cpp  index_node.cpp  record.cpp
storage/src/buffer/: buffer_pool.cpp  frame.cpp
storage/src/disk/: page.cpp
storage/src/index/: index.cpp  index_node.cpp  record.cpp  record_manager.cpp
test/: CMakeLists.txt
test/storage/: index_test.cpp
test/storage/buffer/: buffer_pool_test.cpp  lru_test.cpp
test/storage/disk/: disk_manager_test.cpp  page_test.cpp
test/storage/index/: index_test.cpp  record_test.cpp
